--- a/package.json
+++ b/package.json
@@ -20,6 +20,10 @@
     "serve-favicon": "~2.4.5"
   },
   "devDependencies": {
+    "eslint": "^4.11.0",
+    "eslint-config-airbnb": "^16.1.0",
+    "eslint-config-airbnb-base": "^12.1.0",
+    "eslint-plugin-import": "^2.8.0",
     "mocha": "^4.0.1",
     "node-mocks-http": "^1.6.6",
     "nodemon": "^1.12.1",
