--- a/package.json
+++ b/package.json
@@ -13,12 +13,14 @@
     "debug": "~2.6.9",
     "express": "~4.15.5",
     "jsdom": "^11.3.0",
+    "mochawesome": "^3.0.0",
     "morgan": "~1.9.0",
     "pug": "2.0.0-beta11",
     "puppeteer": "^0.13.0",
     "serve-favicon": "~2.4.5"
   },
   "devDependencies": {
+    "assert": "^1.4.1",
     "eslint": "^4.11.0",
     "eslint-config-airbnb": "^16.1.0",
     "eslint-config-airbnb-base": "^12.1.0",
